Adjusted styling for voice call and removed dummy data

--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -14,7 +14,7 @@
   </header>
   <div class="split" style="display: flex; justify-content: space-between;">
     <div class="left-column">
-      <h1 class="grows">Welcome to Spartain Aid</h1>
+      <h1 class="grows">Welcome to Spartan Aid</h1>
       <p class="grows">Find the best tutors and students to help you with your academic needs</p>
     </div>
     <div class="right-column">
