--- a/Prototype/public/modUsers.css
+++ b/Prototype/public/modUsers.css
@@ -157,16 +157,15 @@ header {
 }
 
 #video-grid {
-    display: grid;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr;
-    width: 60vw;
-    height: 60vh;
+    width: 100%;
+    height: 55vh;
 }
 
 video {
-    width: 100%;
+    width: 30%;
     height: 100%;
     object-fit: cover; 
 }
