updated conversation ui / lots little fixes

--- a/Prototype/public/message.css
+++ b/Prototype/public/message.css
@@ -80,6 +80,10 @@ header {
     flex: 2;
 }
 
+#private-messages {
+    overflow: hidden;
+}
+
 .subjects li a{
     display: block;
     padding: 0px;
