--- a/Prototype/views/account.ejs
+++ b/Prototype/views/account.ejs
@@ -15,7 +15,7 @@
     <header>
         <%- include('partials/navbar') %>
     </header>
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="margin-bottom: 10px;">
         <!-- <div class="test"> -->
             <div id="account">
                 <h1>Account Info</h1><br>
@@ -143,7 +143,7 @@
     </div>
 
     <!-- Edit Bio Modal -->
-    <<div class="modal fade" id="editBioModal" tabindex="-1" aria-labelledby="editBioModalLabel" aria-hidden="true">
+    <div class="modal fade" id="editBioModal" tabindex="-1" aria-labelledby="editBioModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
