--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -14,7 +14,10 @@
         <%- include('partials/navbar') %>
     </header>
     <div class="modPageContent">
-        <h1><%= receiver.fname %> <%= receiver.lname %> </h1>
+        <h1 class="subHeader">
+            <img src="/images/<%= receiver.profilePic %>" class="rounded-circle" alt="profile" height="70" object-fit="cover">
+            <%= receiver.fname + " " + receiver.lname %> 
+        </h1>
         <div class="messages">
             <% if (!messages || messages.length === 0) { %> 
                 <h2> No messages </h2>
@@ -68,16 +71,16 @@
             <form action="/sendMessage?convId=<%= convId %>" method="POST" class="messageSection">
                 <input type="text" class="messageBox" name="message" placeholder="Write Message" required>
                 <input type="hidden" name="userId" value="<%= userId %>">
-                <button type="submit" class="sendBtn">Send</button>
+                <button type="submit" class="grows sendBtn">Send</button>
             </form>
-            <button type="button" class="calendarBtn" data-bs-toggle="modal" data-bs-target="#postModal">Calendar</button>
+            <button type="button" class="grows calendarBtn" data-bs-toggle="modal" data-bs-target="#postModal">Calendar</button>
             <form action="/reviewPage" method="POST">
                 <input type="hidden" name="convId" value="<%= convId %>">
                 <input type="hidden" name="userId2" value="<%= receiver.userId %>"/>
-                <button type="submit" class="reviewBtn">Review</button>
+                <button type="submit" class="grows reviewBtn">Review</button>
             </form>
             <a href="/voiceCall?userId=<%= receiver.userId %>">
-                <button type="submit" class="callBtn">Call</button>
+                <button type="submit" class="grows callBtn">Call</button>
             </a>
         </div>
         
@@ -134,5 +137,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+        window.onload = function() {
+          var messageContainer = document.querySelector('.messages');
+          messageContainer.scrollTop = messageContainer.scrollHeight;
+        };
+      </script>
+      
 </body>
 </html>
