--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -59,6 +59,7 @@
             <% } %>
         </div>
         <div>
+            <div class="rContainer">
             <h1 id="u-header"> Resource Management </h1>
             <div id="upload-content" class="grows">
                 <h2>Upload a Resource</h2>
@@ -81,7 +82,7 @@
                         <button type="submit" class="grows btnLook btn btn-secondary" style="margin-left: 128px;">Upload</button>
                     </div>
                 </form>
-            </div>
+            </div></div>
         </div>
     </div>
 </body>
@@ -99,14 +100,20 @@
         margin-bottom: 10px; /* Space between resource cards */
     }
 
+    .rContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     #upload-content {
         background-color: #16316b;
         color: white;
         border: 2px solid rgb(255, 200, 47);
         border-radius: 10px;
-        margin-left: 50px;
+         /* margin-left: 50px; */
         margin-right: 250px;
-        margin-top: 100px;
+        margin-top: 100px; 
         padding: 20px;
     }
 
@@ -122,7 +129,7 @@
         border-radius: 30px;
         color: white;
         padding: 10px 20px;
-        margin-right: 200px;
+        margin-right: 250px;
         margin-top: 30px;
     }
 
@@ -144,7 +151,7 @@
 
     #pageIndicator {
         font-size: 20px;
-        color: white;
+        color: black;
     }
 </style>
 <script>
