--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -498,7 +498,7 @@
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
               Close
             </button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btnLook btn btn-success">Submit</button>
           </div>
         </form>
       </div>
