--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -164,11 +164,11 @@
 
                 </div>
                 <div
-                  style="width: 600px; height: 62px; left: 150px; top: 150px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 700; word-wrap: break-word;">
+                  style="width: 600px; height: 62px; left: 150px; top: 150px; position: absolute; color: black; font-size: 22px; font-family: Inter; font-weight: 700; word-wrap: break-word;">
                   <%= post.title %>
                 </div>
                 <div
-                  style="width: 600px; height: 62px; left: 150px; top: 200px; position: absolute; color: black; font-size: 12px; font-family: Inter; font-weight: 400; word-wrap: break-word;">
+                  style="width: 600px; height: 62px; left: 150px; top: 190px; position: absolute; color: black; font-size: 17px; font-family: Inter; font-weight: 400; word-wrap: break-word;">
                   <%= post.description %>
                 </div>
               </div>
@@ -176,9 +176,6 @@
               <!-- <div class="replies"> -->
               <!-- Dynamically calculate height -->
               <span class="reply-section flex-grow-1" id="reply-section-<%= post.postId %>" style="display: none;">
-                <% if (!post.replies || post.replies.length===0) { %>
-                  <!-- <p>No replies found, be the first to make one!</p> -->
-                  <% } else { %>
                     <% post.replies.forEach(reply=> { %>
 
 
@@ -242,7 +239,7 @@
                               <input type="hidden" id="replyPostId" value="<%= post.postId %>" name="postId" />
                               <textarea
                                 style="width: 404px; height: 35px; border-radius: 80px; border: 2px black solid; resize: none; overflow: hidden; padding-left: 10px;"
-                                placeholder="Comment here" name="description"></textarea>
+                                placeholder="Comment here" name="description" maxlength="99"></textarea>
                               <div
                                 style="width: 92px; height: 29px; left: 450px; top: 0px; z-index: 2; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
                                 <button type="submit">Comment</button>
@@ -253,7 +250,6 @@
                             style="width: 604px; height: 51px; left: 130px; top: 120px; position: absolute; background: rgb(255, 255, 255); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 65px; border: 2px black solid">
                           </div>
                         </div>
-                      <% } %>
                     </span>
               
 
@@ -491,14 +487,14 @@
             </div>
             <div class="mb-3">
               <label for="description" class="form-label">Description</label>
-              <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
+              <textarea class="form-control" id="description" name="description" rows="4" maxlength="310" required></textarea>
             </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
               Close
             </button>
-            <button type="submit" class="btnLook btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
       </div>
