--- a/Prototype/views/modTutor.ejs
+++ b/Prototype/views/modTutor.ejs
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/modUsers.css">
     <link rel="stylesheet" href="/public/home.css">
-    <title>Home</title>
+    <title>Mod Tutor</title>
 </head>
 <body>
     <header>
@@ -80,6 +81,5 @@
     </div>
 
 </body>
-
 
 </html>
