--- a/Prototype/public/account.css
+++ b/Prototype/public/account.css
@@ -7,14 +7,6 @@ img {
     color: white;
 }
 
-/* .columns {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-inline-start: 12%;
-} */
-
-
 #account {
     align-items: center;
     text-align: center;
@@ -40,8 +32,6 @@ img {
 
 #posts, #reviews {
     align-items: center;
-    /* text-align: center; */
-    /* margin: 0 auto;  */
     margin-right: 215px;
     margin-left: 215px;
 }
@@ -51,12 +41,11 @@ img {
 }
 
 .content-wrapper {
-    border: 4px solid #fac104; /* Border color and thickness */
-    border-radius: 10px; /* Rounded corners */
-    padding: 20px; /* Padding inside the border */
-    margin: 200px; /* Margin around the border */
+    border: 4px solid #fac104;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 200px;
     margin-top: 0;
     margin-bottom: 0;
-    background-color: #16316b; /* Background color */
+    background-color: #16316b;
 }
-
