--- a/Prototype/views/account.ejs
+++ b/Prototype/views/account.ejs
@@ -3,20 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/public/home.css">
         <link rel="stylesheet" href="/public/account.css">
         <script src="/public/script.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <title>Home</title>
+        <title>Account</title>
     
-
 <body>
     <header>
         <%- include('partials/navbar') %>
     </header>
     <div class="content-wrapper" style="margin-bottom: 10px;">
-        <!-- <div class="test"> -->
             <div id="account">
                 <h1>Account Info</h1><br>
                 <% if (userId === user.userId) { %>
@@ -139,7 +138,6 @@
                     <% }); %>
                 </div>
             </div>
-        <!-- </div> -->
     </div>
 
     <!-- Edit Bio Modal -->
@@ -156,7 +154,7 @@
                 <label for="bioInput" class="form-label">Bio</label>
                 <textarea class="form-control" id="bioInput" name="bio" rows="3"><%= user.bio %></textarea>
               </div>
-              <input type="hidden" name="userId" value="<%= user.id %>"> <!-- Assuming user.id is available -->
+              <input type="hidden" name="userId" value="<%= user.id %>">
               <button type="submit" class="btn btn-primary">Save changes</button>
             </form>
           </div>
