--- a/Prototype/views/login.ejs
+++ b/Prototype/views/login.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../public/style.css">
     <title>Login</title>
@@ -24,12 +25,10 @@
 
             <form action="/login" method="post">
                 <div class="login-form">
-                    <!-- email -->
                     <div class="email">
                         <label for="email">Email</label><br>
                         <input type="text" id="email" name="email" placeholder="Enter the email"><br>
                     </div>
-                    <!-- password -->
                     <div class="password">
                         <label for="password">Password</label><br>
                         <input type="password" id="password" name="password" placeholder="Enter the password"><br><br>
@@ -43,7 +42,7 @@
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Forgot Password Modal -->
 <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
