--- a/Prototype/views/message.ejs
+++ b/Prototype/views/message.ejs
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet">
@@ -17,8 +18,6 @@
         <header>
             <%- include('partials/navbar') %>
         </header>
-
-        
    
     <div class="columns">
         <div id="feed">
@@ -83,9 +82,7 @@
             <% }); %>
             </div>
         </div>
-            <!--  -->
             <div id="private-messages">
-
                 <h1 class="subHeader">Private Messages</h1>
                 <% if (convUsers) { %>
                   <ul class="users">
