--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/modMessages.css">
     <link rel="stylesheet" href="/public/home.css">
     <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
-    <title>Home</title>
+    <title>Conversation</title>
 </head>
 <body>
     <header>
