--- a/Prototype/views/teacherAnalytics.ejs
+++ b/Prototype/views/teacherAnalytics.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/home.css">
     <link rel="stylesheet" href="/public/account.css">
@@ -77,7 +78,6 @@
                     </div>
                 </div>
             </div>
-            
 
             <!-- Leaderboard section -->
             <div id="leaderboard">
@@ -98,6 +98,7 @@
                             onclick="toggleLeaderboardView('reviewLeaderboard')">
                     </div>
                 </div>
+
                 <!-- Post Leaderboard Table -->
                 <div id="leaderboardContent" class="table-container">
                     <table class="table table-bordered mt-3">
@@ -201,7 +202,6 @@
 
         <!-- Stats card section -->
         <div class="stats-card">
-            <!-- Posts section -->
             <div id="posts">
                 <div id="header" class="d-flex justify-content-center align-items-center">
                     <% if (posts.length > 0) { %>
@@ -291,7 +291,6 @@
         
 
     </div>
-
 
     <!-- Filter modal -->
     <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
@@ -385,7 +384,6 @@
                         </div>
     
                         <hr>
-                        <!-- mm/dd/yyyy -->
                         <div class="mb-3">
                             <label for="startDate" class="form-label">Start Date</label>
                             <input type="date" class="form-control" id="startDate" name="startDate">
