--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/spartanIcon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/home.css">
     <link rel="stylesheet" href="/public/account.css">
@@ -53,7 +54,7 @@
                 </div>
                 <div id="changePage">
                     <button class="grows btnLook btn btn-secondary" onclick="prevPage()">Previous</button>
-                    <span id="pageIndicator">1/1</span> <!-- Page indicator -->
+                    <span id="pageIndicator">1/1</span>
                     <button class="grows btnLook btn btn-secondary" onclick="nextPage()">Next</button>
                 </div>
             <% } %>
@@ -97,7 +98,7 @@
     }
 
     .resource {
-        margin-bottom: 10px; /* Space between resource cards */
+        margin-bottom: 10px;
     }
 
     .rContainer {
@@ -111,14 +112,12 @@
         color: white;
         border: 2px solid rgb(255, 200, 47);
         border-radius: 10px;
-         /* margin-left: 50px; */
         margin-right: 250px;
         margin-top: 100px; 
         padding: 20px;
     }
 
     #resources-content {
-        
         margin-top: 30px;
     }
 
@@ -144,7 +143,7 @@
     #changePage {
         display: flex;
         justify-content: center;
-        align-items: center; /* Center the page indicator vertically */
+        align-items: center;
         gap: 10px;
         margin-top: 20px;
     }
@@ -162,7 +161,7 @@
         document.querySelectorAll(".resource").forEach((item, index) => {
             item.style.display = (Math.floor(index / itemsPerPage) + 1 === page) ? "block" : "none";
         });
-        updatePageIndicator(); // Update page indicator
+        updatePageIndicator();
     }
 
     function updatePageIndicator() {
@@ -185,7 +184,6 @@
         }
     }
 
-    // Show the first page initially
     showPage(currentPage);
 </script>
 </html>
