--- a/Prototype/views/signup.ejs
+++ b/Prototype/views/signup.ejs
@@ -12,6 +12,9 @@
         body {
             font-family: "Times New Roman", Times, serif;
         }
+        html {
+            zoom: 0.75;
+        }
     </style>
 </head>
 
