--- a/Prototype/public/forgot.css
+++ b/Prototype/public/forgot.css
@@ -13,7 +13,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-image: linear-gradient(45deg, #eee 12.5%, #f2f2f2 0, #f2f2f2 50%, #eee 0, #eee 62.5%, #f2f2f2 0, #f2f2f2);
     width: 300px;
     padding: 20px;
     border-radius: 10px;
