--- a/Prototype/public/review.css
+++ b/Prototype/public/review.css
@@ -24,7 +24,7 @@ body {
 }
 
 .content {
-    background-color: white;
+    background-image: linear-gradient(45deg, #eee 12.5%, #f2f2f2 0, #f2f2f2 50%, #eee 0, #eee 62.5%, #f2f2f2 0, #f2f2f2);
     color: black;
     height: auto;
     margin: 0;
