--- a/Prototype/views/message.ejs
+++ b/Prototype/views/message.ejs
@@ -74,7 +74,7 @@
                         <p><%= user.email %></p>
                         <form action="/createConv" method="POST" class="ms-4">
                             <input type="hidden" id="userId2" value="<%= user.userId %>" name="userId2">
-                            <button type="submit" class="btn btn-primary">Message</button>
+                            <button type="submit" class="messageBtn"> <img src="/images/whiteMail.png" style="width: 30px; height: auto; "> Message</button>
                         </form>
                     </div>
                 </div>
