--- a/Prototype/public/style.css
+++ b/Prototype/public/style.css
@@ -68,7 +68,7 @@ html {
     width: 500px;
     padding-left: 80px;
     padding-right: 80px;
-    background-color: white;
+    background-image: linear-gradient(45deg, #eee 12.5%, #f2f2f2 0, #f2f2f2 50%, #eee 0, #eee 62.5%, #f2f2f2 0, #f2f2f2);
     border-radius: 20px;
     padding-top: 16px;
     border: 3px solid #fac104;
