--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -19,7 +19,7 @@
       <p class="grows">Find the best tutors and students to help you with your academic needs</p>
     </div>
     <div class="right-column">
-      <img src="/images/test.jpeg" alt="home" class="home-image" width="555">
+      <img src="/images/test.jpeg" alt="home" class="home-image" width="100%">
     </div>
   </div>
   <br>
